--- a/header.html
+++ b/header.html
@@ -45,123 +45,123 @@
           <div class="detail-area detail-channel-area">
             <fieldset>
               <legend class="blind">검색 대상 채널 설정</legend>
-              <div class="search-group search-group-news">
-                <h3 class="group-title">뉴스</h3>
+              <div class="search-group search-group-sns">
+                <h3 class="group-title">SNS</h3>
                 <p class="all-btn">
-                  <input type="checkbox" id="allCheckNews" class="all-check-btn">
-                  <label for="allCheckNews">전체 선택</label>
+                  <input type="checkbox" id="allCheckSns" class="all-check-btn" checked>
+                  <label for="allCheckSns">All</label>
                 </p>
                 <div class="search-group-box">
-                  <div class="input-group news-group news-naver">
-                    <input type="checkbox" id="chkNewsNaver" class="helo">
-                    <label for="chkNewsNaver">네이버</label>
+                  <div class="input-group sns-group sns-twitter">
+                    <input type="checkbox" id="chkSnsTwitter" checked>
+                    <label for="chkSnsTwitter">트위터</label>
+                  </div>
+                  <div class="input-group sns-group sns-insta">
+                    <input type="checkbox" id="chkSnsInstagram" checked>
+                    <label for="chkSnsInstagram">인스타그램</label>
+                  </div>
+                  <div class="input-group sns-group sns-youtube">
+                    <input type="checkbox" id="chkSnsYoutube" checked>
+                    <label for="chkSnsYoutube">유튜브</label>
+                  </div>
+                  <div class="input-group sns-group sns-facebook">
+                    <input type="checkbox" id="chkSnsFacebook" checked>
+                    <label for="chkSnsFacebook">페이스북</label>
                   </div>
                 </div>
               </div>
               <div class="search-group search-group-cafe">
-                <h3 class="group-title">카페</h3>
+                <h3 class="group-title">CAFE</h3>
                 <p class="all-btn">
-                  <input type="checkbox" id="allCheckCafe" class="all-check-btn">
-                  <label for="allCheckCafe">전체 선택</label>
+                  <input type="checkbox" id="allCheckCafe" class="all-check-btn" checked>
+                  <label for="allCheckCafe">All</label>
                 </p>
                 <div class="search-group-box">
                   <div class="input-group cafe-group cafe-naver">
-                    <input type="checkbox" id="chkCafeNaver" class="helo">
+                    <input type="checkbox" id="chkCafeNaver" class="helo" checked>
                     <label for="chkCafeNaver">네이버</label>
                   </div>
                   <div class="input-group cafe-group cafe-daum">
-                    <input type="checkbox" id="chkCafeDaum">
+                    <input type="checkbox" id="chkCafeDaum" checked>
                     <label for="chkCafeDaum">다음</label>
                   </div>
                 </div>
               </div>
               <div class="search-group search-group-blog">
-                <h3 class="group-title">블로그</h3>
+                <h3 class="group-title">BLOG</h3>
                 <p class="all-btn">
-                  <input type="checkbox" id="allCheckBlog" class="all-check-btn">
-                  <label for="allCheckBlog">전체 선택</label>
+                  <input type="checkbox" id="allCheckBlog" class="all-check-btn" checked>
+                  <label for="allCheckBlog">All</label>
                 </p>
                 <div class="search-group-box">
                   <div class="input-group blog-group blog-naver">
-                    <input type="checkbox" id="chkBlogNaver">
+                    <input type="checkbox" id="chkBlogNaver" checked>
                     <label for="chkBlogNaver">네이버</label>
                   </div>
                   <div class="input-group blog-group blog-tstory">
-                    <input type="checkbox" id="chkBlogTstory">
+                    <input type="checkbox" id="chkBlogTstory" checked>
                     <label for="chkBlogTstory">티스토리</label>
                   </div>
                   <div class="input-group blog-group blog-daum">
-                    <input type="checkbox" id="chkBlogDaum">
+                    <input type="checkbox" id="chkBlogDaum" checked>
                     <label for="chkBlogDaum">다음</label>
                   </div>
                 </div>
               </div>
-              <div class="search-group search-group-sns">
-                <h3 class="group-title">SNS</h3>
-                <p class="all-btn">
-                  <input type="checkbox" id="allCheckSns" class="all-check-btn">
-                  <label for="allCheckSns">전체 선택</label>
-                </p>
-                <div class="search-group-box">
-                  <div class="input-group sns-group sns-twitter">
-                    <input type="checkbox" id="chkSnsTwitter">
-                    <label for="chkSnsTwitter">트위터</label>
-                  </div>
-                  <div class="input-group sns-group sns-insta">
-                    <input type="checkbox" id="chkSnsInstagram">
-                    <label for="chkSnsInstagram">인스타그램</label>
-                  </div>
-                  <div class="input-group sns-group sns-youtube">
-                    <input type="checkbox" id="chkSnsYoutube">
-                    <label for="chkSnsYoutube">유튜브</label>
-                  </div>
-                  <div class="input-group sns-group sns-facebook">
-                    <input type="checkbox" id="chkSnsFacebook">
-                    <label for="chkSnsFacebook">페이스북</label>
-                  </div>
-                </div>
-              </div>
               <div class="search-group search-group-community">
-                <h3 class="group-title">커뮤니티</h3>
+                <h3 class="group-title">COMMUNITY</h3>
                 <p class="all-btn">
-                  <input type="checkbox" id="allCheckCommu" class="all-check-btn">
-                  <label for="allCheckCommu">전체 선택</label>
+                  <input type="checkbox" id="allCheckCommu" class="all-check-btn" checked>
+                  <label for="allCheckCommu">All</label>
                 </p>
                 <div class="search-group-box">
                   <div class="input-group commu-group commu-ppom">
-                    <input type="checkbox" id="chkCommuPpomppu">
+                    <input type="checkbox" id="chkCommuPpomppu" checked>
                     <label for="chkCommuPpomppu">뽐뿌</label>
                   </div>
                   <div class="input-group commu-group commu-mlb">
-                    <input type="checkbox" id="chkCommuMlbpark">
+                    <input type="checkbox" id="chkCommuMlbpark" checked>
                     <label for="chkCommuMlbpark">MLB파크</label>
                   </div>
                   <div class="input-group commu-group commu-clien">
-                    <input type="checkbox" id="chkCommuClien">
+                    <input type="checkbox" id="chkCommuClien" checked>
                     <label for="chkCommuClien">클리앙</label>
                   </div>
                   <div class="input-group commu-group commu-fm">
-                    <input type="checkbox" id="chkCommuFm">
+                    <input type="checkbox" id="chkCommuFm" checked>
                     <label for="chkCommuFm">FM코리아</label>
                   </div>
                   <div class="input-group commu-group commu-dc">
-                    <input type="checkbox" id="chkCommuDc">
+                    <input type="checkbox" id="chkCommuDc" checked>
                     <label for="chkCommuDc">DC</label>
                   </div>
                   <div class="input-group commu-group commu-ruli">
-                    <input type="checkbox" id="chkCommuRuliweb">
+                    <input type="checkbox" id="chkCommuRuliweb" checked>
                     <label for="chkCommuRuliweb">루리웹</label>
                   </div>
                   <div class="input-group commu-group commu-inven">
-                    <input type="checkbox" id="chkCommuInven">
+                    <input type="checkbox" id="chkCommuInven" checked>
                     <label for="chkCommuInven">인벤</label>
+                  </div>
+                </div>
+              </div>
+              <div class="search-group search-group-news">
+                <h3 class="group-title">NEWS</h3>
+                <p class="all-btn">
+                  <input type="checkbox" id="allCheckNews" class="all-check-btn" checked>
+                  <label for="allCheckNews">All</label>
+                </p>
+                <div class="search-group-box">
+                  <div class="input-group news-group news-naver">
+                    <input type="checkbox" id="chkNewsNaver" class="helo" checked>
+                    <label for="chkNewsNaver">네이버</label>
                   </div>
                 </div>
               </div>
             </fieldset>
           </div>
 
-          <div class="detail-area detail-keyword-area">
+          <div class="detail-area detail-keyword-area clearFix">
             <fieldset>
               <legend class="blind">검색어 상세 설정</legend>
               <div class="detail-search detail-keyword">
@@ -171,7 +171,7 @@
                 </div>
               </div>
 
-              <div class="detail-search detail-include">
+              <div class="detail-search detail-include clearFix">
                 <h4 class="detail-title">포함어</h4>
                 <div class="detail-option">
                   <input type="radio" name="includeOption" class="include-option" id="includeOr" value="include-or"
@@ -186,7 +186,7 @@
                 </div>
               </div>
 
-              <div class="detail-search detail-except">
+              <div class="detail-search detail-except clearFix">
                 <h4 class="detail-title">제외어</h4>
                 <div class="detail-option">
                   <input type="radio" name="exceptOption" class="except-option" id="exceptOr" value="except-or"
@@ -206,9 +206,9 @@
 
         <div class="detail-btn-area">
           <p class="preset-btn">
-            <a href="#"><img src="" alt="preset btn">검색설정 가져오기</a>
+            <a href="#" class="add-icon">검색설정 가져오기</a>
           </p>
-          <button type="submit" class="submit-btn">검색</button>
+          <button type="submit" ID="detailSubmit" class="submit-btn">검색 결과 보기</button>
         </div>
       </form>
     </div>
