--- a/hottest.html
+++ b/hottest.html
@@ -67,7 +67,7 @@
           <article class="content-article article-hottest-cafes width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> HOTTEST CAFES</h3>
+                <h3 class="add-icon">HOTTEST CAFES</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
@@ -80,7 +80,7 @@
           <article class="content-article article-hottest-blogers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> HOTTEST BLOGERS</h3>
+                <h3 class="add-icon">HOTTEST BLOGERS</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
@@ -93,7 +93,7 @@
           <article class="content-article article-hottest-influencers width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> HOTTEST INFLUENCERS</h3>
+                <h3 class="add-icon">HOTTEST INFLUENCERS</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
@@ -110,7 +110,7 @@
           <article class="content-article article-hottest-top10">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> HOTTEST POST TOP 10</h3>
+                <h3 class="add-icon">HOTTEST POST TOP 10</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
