--- a/now.html
+++ b/now.html
@@ -67,11 +67,42 @@
           <article class="content-article article-engagement">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> ENGAGEMENT</h3>
+                <h3 class="add-icon">ENGAGEMENT</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
+                  <div class="chart-sample chart-area chart-pie">
 
+                  </div>
+                  <div class="chart-info-area">
+                    <ul class="chart-info-list">
+                      <li class="info-item info-engagement">
+                        <div class="item-color cht-grey"></div>
+                        <h4 class="item-title">ENGAGEMENT</h4>
+                        <p class="item-num">150,329</p>
+                      </li>
+                      <li class="info-item info-views">
+                        <div class="item-color cht-gr"></div>
+                        <h4 class="item-title">VIEWS</h4>
+                        <p class="item-num">120,000</p>
+                      </li>
+                      <li class="info-item info-comments">
+                        <div class="item-color cht-bl"></div>
+                        <h4 class="item-title">COMMENTS</h4>
+                        <p class="item-num">20,000</p>
+                      </li>
+                      <li class="info-item info-likes">
+                        <div class="item-color cht-yl"></div>
+                        <h4 class="item-title">LIKES</h4>
+                        <p class="item-num">9,872</p>
+                      </li>
+                      <li class="info-item info-shares">
+                        <div class="item-color cht-or"></div>
+                        <h4 class="item-title">SHARES</h4>
+                        <p class="item-num">457</p>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -84,11 +115,98 @@
           <article class="content-article article-channel-details">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> CHANNEL DETAILS</h3>
+                <h3 class="add-icon">CHANNEL DETAILS</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap -wrap">
+                <div class="article-list-wrap detail-list-wrap">
+                  <ul class="detail-list">
+                    <li class="detail-item item-title">
+                      <ul class="item-sub-list detail-title-list">
+                        <li class="detail-title title-channel">CHANNEL</li>
+                        <li class="detail-title title-posts">POSTS</li>
+                        <li class="detail-title title-engagement">ENGAGEMENT PER POST</li>
+                        <li class="detail-title title-comments">COMMENTS</li>
+                        <li class="detail-title title-views">VIEWS</li>
+                        <li class="detail-title title-likes">LIKES</li>
+                        <li class="detail-title title-shares">SHARES</li>
+                      </ul>
+                    </li>
+                    <li class="detail-item item-subs sns-subs">
+                      <ul class="item-sub-list detail-subs-list">
+                        <li class="detail-subs subs-channel">SNS</li>
+                        <li class="detail-subs subs-posts">
+                          <div class="chert-horizontal">
 
+                          </div>
+                        </li>
+                        <li class="detail-subs subs-engagement">307.2</li>
+                        <li class="detail-subs subs-comments">17,115</li>
+                        <li class="detail-subs subs-views">17,115</li>
+                        <li class="detail-subs subs-likes">17,115</li>
+                        <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                    <li class="detail-item item-subs community-subs">
+                      <ul class="item-sub-list detail-subs-list">
+                        <li class="detail-subs subs-channel">커뮤니티</li>
+                        <li class="detail-subs subs-posts">
+                          <div class="chert-horizontal">
+
+                          </div>
+                        </li>
+                        <li class="detail-subs subs-engagement">307.2</li>
+                        <li class="detail-subs subs-comments">17,115</li>
+                        <li class="detail-subs subs-views">17,115</li>
+                        <li class="detail-subs subs-likes">17,115</li>
+                        <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                    <li class="detail-item item-subs blog-subs">
+                      <ul class="item-sub-list detail-subs-list">
+                        <li class="detail-subs subs-channel">블로그</li>
+                        <li class="detail-subs subs-posts">
+                          <div class="chert-horizontal">
+
+                          </div>
+                        </li>
+                        <li class="detail-subs subs-engagement">307.2</li>
+                        <li class="detail-subs subs-comments">17,115</li>
+                        <li class="detail-subs subs-views">17,115</li>
+                        <li class="detail-subs subs-likes">17,115</li>
+                        <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                    <li class="detail-item item-subs cafe-subs">
+                      <ul class="item-sub-list detail-subs-list">
+                        <li class="detail-subs subs-channel">카페</li>
+                        <li class="detail-subs subs-posts">
+                          <div class="chert-horizontal">
+
+                          </div>
+                        </li>
+                        <li class="detail-subs subs-engagement">307.2</li>
+                        <li class="detail-subs subs-comments">17,115</li>
+                        <li class="detail-subs subs-views">17,115</li>
+                        <li class="detail-subs subs-likes">17,115</li>
+                        <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                    <li class="detail-item item-subs news-subs">
+                      <ul class="item-sub-list detail-subs-list">
+                        <li class="detail-subs subs-channel">뉴스</li>
+                        <li class="detail-subs subs-posts">
+                          <div class="chert-horizontal">
+
+                          </div>
+                        </li>
+                        <li class="detail-subs subs-engagement">307.2</li>
+                        <li class="detail-subs subs-comments">17,115</li>
+                        <li class="detail-subs subs-views">17,115</li>
+                        <li class="detail-subs subs-likes">17,115</li>
+                        <li class="detail-subs subs-shares">17,115</li>
+                      </ul>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -101,7 +219,7 @@
           <article class="content-article article-sentiment width-3-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT</h3>
+                <h3 class="add-icon">SENTIMENT</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -114,7 +232,7 @@
           <article class="content-article article-sentiment-channels width-3-2">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT BY CHANNELS</h3>
+                <h3 class="add-icon">SENTIMENT BY CHANNELS</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -131,7 +249,7 @@
           <article class="content-article article-sentiment-keyword width-4-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT KEYWORD</h3>
+                <h3 class="add-icon">SENTIMENT KEYWORD</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -144,7 +262,7 @@
           <article class="content-article article-keyword-association width-4-2">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> KEYWORD ASSOCIATION</h3>
+                <h3 class="add-icon">KEYWORD ASSOCIATION</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -157,7 +275,7 @@
           <article class="content-article article-keyword-ranking width-4-1">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> KEYWORD RANKING</h3>
+                <h3 class="add-icon">KEYWORD RANKING</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
