--- a/trend.html
+++ b/trend.html
@@ -67,7 +67,7 @@
           <article class="content-article article-post-trend">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> POST TREND</h3>
+                <h3 class="add-icon">POST TREND</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
@@ -84,7 +84,7 @@
           <article class="content-article article-engagement-trend">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> ENGAGEMENT TREND</h3>
+                <h3 class="add-icon">ENGAGEMENT TREND</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -101,7 +101,7 @@
           <article class="content-article article-sentiment-trend">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT TREND</h3>
+                <h3 class="add-icon">SENTIMENT TREND</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
@@ -118,7 +118,7 @@
           <article class="content-article article-keyword-trend">
             <div class="article-inner">
               <div class="article-title">
-                <h3><img src="./src/" class="title-icon" alt=""> KEYWORD TREND</h3>
+                <h3 class="add-icon">KEYWORD TREND</h3>
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap -wrap">
